--- a/gemtd.css
+++ b/gemtd.css
@@ -45,6 +45,8 @@
       list-style: none;
 }
 
+
+
 .t-checked {
     background-color:  rgb(44, 71, 54);
 }
@@ -61,35 +63,65 @@
     background-color:  rgb(225, 40, 40);
 }
 
-.t-topaz {
+
+.t-1-topaz, .t-2-topaz, .t-3-topaz, .t-4-topaz, .t-5-topaz, .t-6-topaz {
     background-color:  rgb(193, 140, 6);
 }
 
-.t-opal {
+.t-1-opal, .t-2-opal, .t-3-opal, .t-4-opal, .t-5-opal, .t-6-opal{
     background-color:  rgb(21, 7, 47);
 }
 
-.t-emerald {
-    background-color:  rgb(13, 101, 23);
+.t-1-emerald, .t-2-emerald, .t-3-emerald, .t-4-emerald, .t-5-emerald, .t-6-emerald {
+    background-image: url( /assets/emerald.svg );
+    height: 100%;
+    scale: 1.5;
+    margin-bottom: 3px;
+
 }
 
-.t-sapphire {
+.t-gem {
+    z-index:10;
+    position: relative;
+    height: 100%;
+    /* box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.6); */
+	transform: translatey(0px);
+	animation: float 6s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+        rotate: 1deg;
+	}
+	50% {
+		transform: translatey(-3px);
+        rotate: -2deg;
+	}
+	100% {
+		transform: translatey(0px);
+        rotate: 1deg;
+	}
+}
+
+
+.t-1-sapphire, .t-2-sapphire, .t-3-sapphire, .t-4-sapphire, .t-5-sapphire, .t-6-sapphire {
     background-color:  rgb(118, 208, 213);
 }
 
-.t-ruby {
+.t-1-ruby, .t-2-ruby, .t-3-ruby, .t-4-ruby, .t-5-ruby, .t-6-ruby  {
     background-color:  rgb(67, 13, 5);
 }
 
-.t-diamond {
+.t-1-diamond, .t-2-diamond, .t-3-diamond, .t-4-diamond, .t-5-diamond, .t-6-diamond {
     background-color:  rgb(218, 218, 218);
 }
 
-.t-amethyst {
+.t-1-amethyst, .t-2-amethyst, .t-3-amethyst, .t-4-amethyst, .t-5-amethyst, .t-6-amethyst {
     background-color:  rgb(89, 93, 16);
 }
 
-.t-aquamarine{
+.t-1-aquamarine, .t-2-aquamarine, .t-3-aquamarine, .t-4-aquamarine, .t-5-aquamarine, .t-6-aquamarine{
     background-color:  rgb(191, 27, 194);
 }
 
@@ -115,3 +147,6 @@
     margin-top: 20px;
 }
 
+.t-slider {
+    margin-left: 1200px;
+}
