--- a/gemtd.css
+++ b/gemtd.css
@@ -39,20 +39,32 @@
 }
 
 .t-tile  {
-      min-width: 30px;
-      min-height: 30px;
-      background-color: rgb(124, 176, 143);
-      list-style: none;
+    min-width: 30px;
+    min-height: 30px;
+    background-color: rgb(124, 176, 143);
+    list-style: none;
 }
 
+.t-tile *{
+    background-repeat: no-repeat;
+}
 
+.t-buildable:hover {
+    box-shadow: inset 0px 0px 4px 2px rgba(186, 186, 186, 0.8)
+                , 0px 0px 3px 2px rgba(186, 186, 186, 0.8);
+}
 
 .t-checked {
     background-color:  rgb(44, 71, 54);
 }
 
 .t-stone {
-    background-color:  rgb(63, 63, 63);
+    background-image: url( /assets/stone.svg );
+    scale: 1.2;
+    padding-bottom: 10px;
+    z-index:10;
+    position: relative;
+    height: 100%;
 }
 
 .t-steps {
@@ -87,6 +99,7 @@
     /* box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.6); */
 	transform: translatey(0px);
 	animation: float 6s ease-in-out infinite;
+    margin-bottom: 13px;
 }
 
 @keyframes float {
@@ -149,4 +162,14 @@
 
 .t-slider {
     margin-left: 1200px;
+}
+
+
+.t-info {
+    overflow:visible;
+    background:none !important;
+    position: fixed;
+    bottom: 10%;
+    width: 100%;
+    left: 79%;
 }
